# blocking-responses-poc

./: .env.example  .env.template  .gitignore  API_DOCUMENTATION.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CLIENT_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  EXECUTIVE_SUMMARY.md  FINAL_CLIENT_DOCUMENTATION.md  FRONTEND_VERIFICATION_GUIDE.md  ISSUES_ANALYSIS_COMPLETE.md  LICENSE  Makefile  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  SECURITY.md  SECURITY_AUDIT_COMPLETE.md  SECURITY_FIXES.md  SLIDING_WINDOW_COMPLETE.md  STREAMING_API.md  TESTING.md  TESTING_GUIDE.md  app.py  complete_answer.py  detailed_issue_report.py  docker-compose.yml  docker-run.sh  example_client.py  final_complete_answers.py  final_comprehensive_answer.py  final_verification.py  investigate_specific_issues.py  issue_analysis.py  nginx.conf  requirements.txt  (+17 more)
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: __init__.py  audit.py  chat.py  compliance.py  config.py  legacy.py  metrics.py  testing.py
backend/app/core/: __init__.py  config.py  database.py  security.py  services.py
backend/app/db/: database.py
backend/app/models/: audit.py
backend/app/schemas/: requests.py
backend/app/services/: compliance.py  metrics.py  openai_service.py  presidio_service.py  sliding_window.py
backend/app/utils/: sse.py  tokens.py
design/: NEXT-STEPS.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Header.tsx  Layout.tsx  RecentActivity.tsx  Sidebar.tsx
frontend/src/components/charts/: ComplianceBreakdown.tsx  MetricsChart.tsx
frontend/src/components/modals/: NotificationsModal.tsx  SettingsModal.tsx
frontend/src/components/pages/: AuditLogs.tsx  Dashboard.tsx  StreamMonitor.tsx  StreamMonitorNew.tsx  TestSuite.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  GlassCard.tsx  MarkdownRenderer.tsx  MetricCard.tsx  Notifications.tsx  StatusIndicator.tsx
frontend/src/stores/: dashboard.ts
frontend/src/types/: index.ts
frontend/src/utils/: api.ts  index.ts  notifications.ts  useConnection.ts
static/: index.html
